--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ captures/
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/assetWizardSettings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+.idea/vcs.xml
 .idea/dictionaries
 .idea/libraries
 .idea/caches
