--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.ar.sceneform.plugin'
 
 android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "io.github.formular_team.formular"
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -17,8 +18,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
 }
 
@@ -27,7 +28,17 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'org.apache.cordova:framework:7.1.0'
+    implementation 'com.google.ar:core:1.6.0'
+    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.6.0'
+    implementation 'com.google.ar.sceneform:core:1.6.0'
+    implementation 'com.google.guava:guava:24.1-jre'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
+
+sceneform.asset('sampledata/teapot.obj',
+        'default',
+        'sampledata/teapot.sfa',
+        'src/main/assets/teapot')
