--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".lobby.LobbyActivity"></activity>
+        <activity android:name=".SettingsActivity"></activity>
         <activity android:name=".MainActivity"
             android:configChanges="orientation|screenSize"
             android:exported="true"/>
