--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".lobby.LobbyActivity"></activity>
-        <activity android:name=".CustomizeActivity"></activity>
+        <activity android:name=".lobby.LobbyActivity" />
+        <activity android:name=".CustomizeActivity" />
         <activity android:name=".MainActivity"
             android:configChanges="orientation|screenSize"
-            android:exported="true"/>
+            android:exported="true" />
 
         <meta-data
             android:name="com.google.ar.core"
