--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:name=".ArActivity"
             android:configChanges="orientation|screenSize"
             android:exported="true" />
+        <activity
+            android:name=".SandboxActivity"
+            android:configChanges="orientation|screenSize"
+            android:exported="true" />
         <activity android:name=".NewRaceActivity"/>
 
         <meta-data
